--- a/components/Title/Title.module.scss
+++ b/components/Title/Title.module.scss
@@ -7,7 +7,7 @@
     background-color: $misty-pink;
     margin-top: -25px;
     position: relative;
-    left: 180px; 
+    //left: 180px; 
     top: 50px;
 }
 
@@ -15,7 +15,7 @@
     display: flex;
     margin-top: -50px;
     margin-bottom: 30px;
-    padding:0px;
+    //padding:0px;
 }
 
 .underline {
